Comment add, update and delete + api doc
