# storage/api-docs/api-docs.json
@@ -85,6 +85,226 @@
                 }
             }
         },
+        "/posts/{id}/comments": {
+            "get": {
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Lists comments on a single blog post",
+                "description": "Lists comments on a single blog post",
+                "operationId": "postComments",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Post ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CommentResource"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Creates a comment",
+                "description": "Creates a comment for a blog post",
+                "operationId": "createPostComment",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Post ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/StoreCommentRequest"
+                },
+                "responses": {
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Post"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "scalar": "bearer"
+                    }
+                ]
+            }
+        },
+        "/posts/{postId}/comments/{commentId}": {
+            "put": {
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Updates a comment",
+                "description": "Updates a comment for a blog post",
+                "operationId": "updatePostComment",
+                "parameters": [
+                    {
+                        "name": "postId",
+                        "in": "path",
+                        "description": "Post ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "commentId",
+                        "in": "path",
+                        "description": "Comment ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/StoreCommentRequest"
+                },
+                "responses": {
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Post"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "scalar": "bearer"
+                    }
+                ]
+            }
+        },
+        "/comments/{id}": {
+            "delete": {
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Deletes a comment",
+                "description": "Deletes a comment",
+                "operationId": "deleteComment",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Comment ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "description": "Status of the operation",
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "description": "The response message",
+                                            "type": "string",
+                                            "example": "Comment successfully deleted"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "scalar": "bearer"
+                    }
+                ]
+            }
+        },
         "/posts": {
             "get": {
                 "tags": [
@@ -158,14 +378,7 @@
                 "description": "Creates a blog post",
                 "operationId": "createPost",
                 "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "$ref": "#/components/schemas/StorePostRequest"
-                            }
-                        }
-                    }
+                    "$ref": "#/components/requestBodies/StorePostRequest"
                 },
                 "responses": {
                     "202": {
@@ -261,14 +474,7 @@
                     }
                 ],
                 "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "$ref": "#/components/schemas/UpdatePostRequest"
-                            }
-                        }
-                    }
+                    "$ref": "#/components/requestBodies/StorePostRequest"
                 },
                 "responses": {
                     "202": {
@@ -364,89 +570,6 @@
     },
     "components": {
         "schemas": {
-            "StorePostRequest": {
-                "title": "StorePostRequest",
-                "description": "Create Post request",
-                "properties": {
-                    "title": {
-                        "title": "Title",
-                        "description": "The blog post title",
-                        "type": "string",
-                        "format": "string",
-                        "example": "This is my first blog post"
-                    },
-                    "slug": {
-                        "title": "Slug",
-                        "description": "The blog post slug",
-                        "type": "string",
-                        "format": "string",
-                        "example": "this-is-my-first-blog-post"
-                    },
-                    "body": {
-                        "title": "Body",
-                        "description": "The blog post content",
-                        "type": "string",
-                        "format": "string",
-                        "example": "This is the content of my first blog"
-                    },
-                    "user_id": {
-                        "title": "Author ID",
-                        "description": "The blog post's author ID",
-                        "type": "integer",
-                        "format": "integer",
-                        "example": 10
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "StorePostRequest"
-                }
-            },
-            "UpdatePostRequest": {
-                "title": "UpdatePostRequest",
-                "description": "Update Post request",
-                "properties": {
-                    "id": {
-                        "title": "ID",
-                        "description": "The blog post ID",
-                        "type": "string",
-                        "format": "int64",
-                        "example": 1
-                    },
-                    "title": {
-                        "title": "Title",
-                        "description": "The blog post title",
-                        "type": "string",
-                        "format": "string",
-                        "example": "This is my first blog post"
-                    },
-                    "slug": {
-                        "title": "Slug",
-                        "description": "The blog post slug",
-                        "type": "string",
-                        "format": "string",
-                        "example": "this-is-my-first-blog-post"
-                    },
-                    "body": {
-                        "title": "Body",
-                        "description": "The blog post content",
-                        "type": "string",
-                        "format": "string",
-                        "example": "This is the content of my first blog"
-                    },
-                    "user_id": {
-                        "title": "Author ID",
-                        "description": "The blog post's author ID",
-                        "type": "integer",
-                        "format": "integer",
-                        "example": 10
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "UpdatePostRequest"
-                }
-            },
             "CommentResource": {
                 "title": "CommentResource",
                 "description": "Comment resource",
@@ -792,6 +915,50 @@
                 "type": "object",
                 "xml": {
                     "name": "User"
+                }
+            }
+        },
+        "requestBodies": {
+            "StoreCommentRequest": {
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "required": [
+                                "comment"
+                            ],
+                            "properties": {
+                                "comment": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "StorePostRequest": {
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "required": [
+                                "title",
+                                "body"
+                            ],
+                            "properties": {
+                                "title": {
+                                    "type": "string",
+                                    "example": "This is my title"
+                                },
+                                "body": {
+                                    "type": "string",
+                                    "example": "This is my blog post content"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
                 }
             }
         },
